# activity_logger

./: .gitignore  LICENSE  MANIFEST.in  README.md  activity_logger.py  build_and_notarize.sh  build_app.sh  entitlements.plist  install.sh  notarize.sh  pyproject.toml  requirements.txt  run_cli.sh  setup.py  setup_app.py  setup_xcode.sh  sign_app.sh  store_notary_credentials.sh
activity_logger/: __init__.py  app.py  cli.py  core.py  local_model.py  login_item.py  prompts.py  redact.py  settings.py
build-venv/: pyvenv.cfg
resources/: README.md  wood.icns
scripts/: prepare_build.sh
venv311/: pyvenv.cfg
