[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-logger"
version = "1.0.0"
description = "AI-powered activity logger that captures screenshots and analyzes user actions"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Michael Kim", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Screen Savers",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.7.7",
    "Pillow>=10.0.0",
    "openai>=1.40.0",
    "pyobjc-framework-Quartz>=10.0.0",
]

[project.scripts]
activity-logger = "activity_logger.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/activity_logger"
Repository = "https://github.com/yourusername/activity_logger"
Issues = "https://github.com/yourusername/activity_logger/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["activity_logger*"]

[tool.setuptools.package-data]
activity_logger = ["*.txt", "logs/*.txt"]
